<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Resultados" tools:layout_editor_absoluteY="81dp">

    <Button
            android:text="@string/salir_del_programa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="finaliza"/>
    <TextView
            android:text="@string/resultados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/textView2"
            android:layout_marginTop="94dp" android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            android:textStyle="bold" android:textSize="24sp"/>
    <TextView
            android:text="@string/textoresultado"
            android:layout_width="0dp"
            android:layout_height="109dp"
            android:id="@+id/textView2"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="61dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="53dp"
            android:layout_marginStart="53dp" android:layout_marginEnd="53dp" android:layout_marginRight="53dp"/>
</android.support.constraint.ConstraintLayout>