<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" android:background="@drawable/fondo">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:id="@+id/label_question"/>

    <TextView
            android:text="@string/pregunta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pregunta"
            android:textSize="18sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/label_question"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    <View
            android:id="@+id/ruler"
            android:layout_below="@id/pregunta"
            android:layout_marginTop="10dp"
            android:background="#813e3e3e"
            android:layout_height="1dp"
            android:layout_width="match_parent"
    />

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ruler"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:id="@+id/answer_group">

        <RadioButton
                android:text="@string/radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuesta1"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuesta2"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuesta3"
                android:layout_weight="1"/>

        <RadioButton
                android:text="@string/radiobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/respuesta4"
                android:layout_weight="1"/>
    </RadioGroup>
    <Button
            android:text="@string/siguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" android:id="@+id/boton_siguiente" android:layout_marginBottom="39dp"
            android:layout_alignParentEnd="true" android:layout_alignParentRight="true"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:onClick="botonsiguiente"/>

</RelativeLayout>